--- a/index.html
+++ b/index.html
@@ -1,1 +1,8 @@
-
+<script>
+  
+let theUrl = 'https://google.com';
+    var xmlHttp = new XMLHttpRequest();
+    xmlHttp.open( "GET", theUrl, false ); 
+    xmlHttp.send( null );
+   console.log(xmlHttp.responseText,true);
+</script>
